Create user interface

--- a/index.html
+++ b/index.html
@@ -3,8 +3,42 @@
     <head>
         <meta charset="utf-8">
         <title>Rock Paper Scissors</title>
+        <link rel="stylesheet" href="style.css"/>
         <script src="script.js"></script>
+        <script src="ui.js"></script>
     </head>
     <body>
+        <h1>Rock, Paper, Scissors?</h1>
+        <div class="container">
+            <div class="player">
+                <h3>Player</h3>
+                <img class="playerImage" src="images/player.png">
+                <div class="score">
+                    <p>Score: </p>
+                    <div class="playerScore"></div>
+                </div>
+                <div class="selections">
+                    <img class="selection rock" src="images/rock.png">
+                    <img class="selection paper" src="images/paper.png">
+                    <img class="selection scissors" src="images/scissors.png">
+                </div>
+            </div>
+            <div class="computer">
+                <h3>Computer</h3>
+                <img  class="computerImage" src="images/computer.png">
+                <div class="score">
+                    <p>Score: </p>
+                    <div class="computerScore"></div>
+                </div>
+                <div class="selections">
+                    <img class="rock" src="images/rock.png">
+                    <img class="paper" src="images/paper.png">
+                    <img class="scissors" src="images/scissors.png">
+                </div>
+            </div>
+        </div>
+        <footer>
+            Developer: Saleamlack
+        </footer>
     </body>
 </html>
