--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                     <div class="playerScore"></div>
                 </div>
                 <div class="selections">
-                    <img class="selection rock" src="images/rock.png">
-                    <img class="selection paper" src="images/paper.png">
-                    <img class="selection scissors" src="images/scissors.png">
+                    <img class="rock" src="images/rock.png">
+                    <img class="paper" src="images/paper.png">
+                    <img class="scissor" src="images/scissors.png">
                 </div>
             </div>
             <div class="computer">
@@ -33,7 +33,7 @@
                 <div class="selections">
                     <img class="rock" src="images/rock.png">
                     <img class="paper" src="images/paper.png">
-                    <img class="scissors" src="images/scissors.png">
+                    <img class="scissor" src="images/scissors.png">
                 </div>
             </div>
         </div>
