--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Rock Paper Scissors</title>
         <link rel="stylesheet" href="style.css"/>
         <script src="script.js"></script>
