Add new class name identify selections

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Rock Paper Scissors</title>
         <link rel="stylesheet" href="style.css"/>
-        <script src="script.js"></script>
+        <script src="script.js" defer></script>
         <script src="ui.js"></script>
     </head>
     <body>
@@ -19,9 +19,9 @@
                     <div class="playerScore"></div>
                 </div>
                 <div class="selections">
-                    <img class="rock" src="images/rock.png">
-                    <img class="paper" src="images/paper.png">
-                    <img class="scissor" src="images/scissors.png">
+                    <img class="playerSelection rock" src="images/rock.png">
+                    <img class="playerSelection paper" src="images/paper.png">
+                    <img class="playerSelection scissors" src="images/scissors.png">
                 </div>
             </div>
             <div class="computer">
@@ -32,9 +32,9 @@
                     <div class="computerScore"></div>
                 </div>
                 <div class="selections">
-                    <img class="rock" src="images/rock.png">
-                    <img class="paper" src="images/paper.png">
-                    <img class="scissor" src="images/scissors.png">
+                    <img class="computerSelection rock" src="images/rock.png">
+                    <img class="computerSelection paper" src="images/paper.png">
+                    <img class="computerSelection scissors" src="images/scissors.png">
                 </div>
             </div>
         </div>
